# MLService

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  async_server.h  docker-compose.yml  inference.cc  inference.h  ml_service.cc  ml_service.proto  ocellus_ml_service.cc  ocellus_ml_service.proto  sync_server.h
